# orgo_agent

./: .gitignore  CLAUDE.md  README.md  hello.txt  pyproject.toml  requirements.txt  tasks.md
agent/: __init__.py  bootstrap.sh  ralph_wiggum.py
tests/: __init__.py  test_e2e.py
workspace_mcp/: __init__.py  server.py  state.py
