[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-mcp"
version = "0.1.0"
description = "MCP server for AI agent workspace management on Orgo cloud VMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "orgo>=0.0.30",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
workspace-mcp = "workspace_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["workspace_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
